--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
